# TopoptComec

./: .gitignore  CONTRIBUTING.md  README.md  TopoptComec.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  __main__.py  cli.py  cli_preview.py  exporters.py  parameter_check.py  time_estimation.py
app/cli/: cli.py
app/core/: analyzers.py  displacements.py  fem.py  initializers.py  optimizers.py  post_processing.py
app/gui/: main_window.py  parameter_manager.py  resource_path_finder.py  widgets.py  workers.py
app/ui/: exporters.py  icons.py  main_window.py  parameter_manager.py  plotting.py  resource_path_finder.py  widgets.py  workers.py
docs/: ARCHITECTURE.md  CODEMAP.md  EXAMPLE.md  GLOSSARY.md  SKILL.md
results/BeeSting_3D/: BeeSting_3D_density_field.npz  BeeSting_3D_loss_function.csv
results/Bird_2D/: Bird_2D_density_field.npz  Bird_2D_loss_function.csv
results/Bridge_2D/: Bridge_2D_density_field.npz  Bridge_2D_loss_function.csv
results/Butterfly_2D/: Butterfly_2D_density_field.npz  Butterfly_2D_loss_function.csv
results/ForceInverter_1Sup_2D/: ForceInverter_1Sup_2D_density_field.npz  ForceInverter_1Sup_2D_loss_function.csv
results/ForceInverter_2Sup_2D/: ForceInverter_2Sup_2D_density_field.npz  ForceInverter_2Sup_2D_loss_function.csv
results/ForceInverter_3D/: ForceInverter_3D_density_field.npz  ForceInverter_3D_loss_function.csv
results/Gripper_2D/: Gripper_2D_density_field.npz  Gripper_2D_loss_function.csv
results/KeyboardKey_3D/: KeyboardKey_3D_density_field.npz  KeyboardKey_3D_loss_function.csv
results/Shelf_2D/: Shelf_2D_density_field.npz  Shelf_2D_loss_function.csv
results/Snake_2D/: Snake_2D_density_field.npz  Snake_2D_loss_function.csv
tests/: conftest.py  presets_test.json  test_analyzers.py  test_cli.py  test_displacements.py  test_exporters.py  test_fem.py  test_graphic_interaction.py  test_initializers.py  test_main.py  test_main_window.py  test_numerics.py  test_optimizers.py  test_parameter_validation.py  test_widgets.py  test_workers.py
tests/references/: regenerate_references.py  test_displacement_with_presets_Bridge_2D.npz  test_displacement_with_presets_Bridge_2D_Multi-material.npz  test_displacement_with_presets_Butterfly_2D.npz  test_displacement_with_presets_ForceInverter_1Sup_2D.npz  test_displacement_with_presets_ForceInverter_2Sup_2D.npz  test_displacement_with_presets_ForceInverter_3D.npz  test_displacement_with_presets_Gripper_2D.npz  test_displacement_with_presets_Shelf_2D.npz  test_optimizers_with_presets_Bridge_2D.npz  test_optimizers_with_presets_Bridge_2D_Multi-material.npz  test_optimizers_with_presets_Butterfly_2D.npz  test_optimizers_with_presets_ForceInverter_1Sup_2D.npz  test_optimizers_with_presets_ForceInverter_2Sup_2D.npz  test_optimizers_with_presets_ForceInverter_3D.npz  test_optimizers_with_presets_Gripper_2D.npz  test_optimizers_with_presets_Shelf_2D.npz
topoptcomec/: __init__.py  __main__.py  exporters.py  parameter_check.py  presets.json  presets_io.py  time_estimation.py
topoptcomec/cli/: __init__.py  cli.py  cli_preview.py
(+19 files in other folders)
