[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topoptcomec"
version = "0.1.0"
description = "Interactive topology optimization for compliant mechanisms"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Luc Prevost"}]
keywords = ["topology-optimization", "compliant-mechanisms", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "vtk>=9.2",
    "PyMCubes>=0.1.4",
    "numpy-stl>=3.0",
    "lib3mf>=2.3",
]

[project.urls]
Homepage = "https://github.com/ninja7v/topoptcomec"
Repository = "https://github.com/ninja7v/topoptcomec.git"
Documentation = "https://github.com/ninja7v/topoptcomec/wiki"
Issues = "https://github.com/ninja7v/topoptcomec/issues"

[project.scripts]
topoptcomec = "topoptcomec.__main__:main"

[tool.setuptools.packages.find]
include = ["topoptcomec*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
topoptcomec = ["icons/*", "presets.json"]
